@@ -93,6 +93,22 @@
       </get-->
     </set>
 
+    <set name="logger-test" description="Logger unit tests" feature="AF Logger for Launcher daemon" requirement="1131430" >   
+
+      <case name="Logger" type="Functional" description="Unit tests for Logger class" level="Component" timeout="20">
+          <step expected_result="0">su - user -c 'source /tmp/session_bus_address.user &amp;&amp; DISPLAY=:0 /usr/share/applauncherd-tests/ut_logger'</step>
+      </case>
+
+      <environments>
+          <scratchbox>true</scratchbox>
+          <hardware>true</hardware>    
+      </environments>
+
+      <!--get>
+      </get-->
+    </set>
+
+
   </suite>
 </testdefinition>
 
